# web_hw7

./: config.ini  db_crud.py  docker-compose.yml  main.py  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 004f213fd314_split_students_fullname.py  f7c94fe6b383_init.py
conf/: db.py  models.py
seeds/: __init__.py  insert_fake_data.py
