[tool.poetry]
name = "web-hw7"
version = "0.1.0"
description = ""
authors = ["marinasemak <marina.semak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
faker = "^30.1.0"
black = "^24.8.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
